AddEditGradeActivity working with Dashboard

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AddGradeActivity"
+            android:name=".AddEditGradeActivity"
             android:label="@string/title_activity_addGrade"
             android:theme="@style/AppTheme.NoActionBar" />
 
